--- a/account/src/main/resources/bootstrap.yml
+++ b/account/src/main/resources/bootstrap.yml
@@ -17,14 +17,14 @@ spring:
         # 设置 账号数据源配置
         account:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://124.222.253.95:3306/account?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
-          username: root
-          password: weqfd4312
+          url: jdbc:mysql://:3306/account?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
+          username:
+          password:
         master:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://124.222.253.95:3306/account?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
-          username: root
-          password: weqfd4312
+          url: jdbc:mysql://:3306/account?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
+          username:
+          password:
       seata: true # 使用多数据源要让这个属性设为true
 seata:
   application-id: ${spring.application.name}
