--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -17,15 +17,14 @@ spring:
         # 设置 账号数据源配置
         account:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://124.222.253.95:3306/order?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
+          url: jdbc:mysql://:3306/order?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
           username: root
-          password: weqfd4312
+          password:
         master:
           driver-class-name: com.mysql.cj.jdbc.Driver
-          url: jdbc:mysql://124.222.253.95:3306/order?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
+          url: jdbc:mysql://:3306/order?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false
           username: root
-          password: weqfd4312
-#          schema: classpath:sql/schema-account.sql
+          password:
 seata:
   application-id: ${spring.application.name}
   # 这里的配置对应 seataServer.properties 中的 service.vgroupMapping.storage-service-group=default
